horizontal scroll bugfix

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@
 
 body {
     font-family: 'Rajdhani', sans-serif;
+    overflow-x: hidden
 }
 
 a:link {
@@ -68,16 +69,12 @@ p {
 
 /* Accomodations for phones */
 
-@media screen and (max-width:420px) {
+@media screen and (max-width:412px) {
     .container {
-        max-width: 400px;
+        max-width: 100%;
     }
     .logo {
         font-size: 30px;
-    }
-    .footer_text {
-        text-align: center;
-        max-width: 100%;
     }
 }
 
